--- a/style/css/style.css
+++ b/style/css/style.css
@@ -499,6 +499,8 @@ html .l-page-wrapper {
   border-radius: 1rem;
   width: 50%;
   height: 50%;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 @media (max-width: 768px) {
@@ -521,7 +523,6 @@ html .l-page-wrapper {
 
 @media (max-width: 1024px) {
   .c-description {
-    padding: 0 5%;
     width: 50%;
   }
 }
@@ -529,6 +530,7 @@ html .l-page-wrapper {
 @media (max-width: 768px) {
   .c-description {
     width: 100%;
+    padding: 0;
   }
 }
 
