--- a/style/css/style.css
+++ b/style/css/style.css
@@ -379,12 +379,14 @@ html .l-page-wrapper {
   transition: background-color 0.5s;
 }
 
-.c-nav__item--on {
-  background-color: #fff;
-  color: #a43f49;
+@media (min-width: 1351px) {
+  .c-nav__item:hover {
+    background-color: #fff;
+    color: #a43f49;
+  }
 }
 
-.c-nav__item:hover {
+.c-nav__item--on {
   background-color: #fff;
   color: #a43f49;
 }
