--- a/style/scss/_variables.scss
+++ b/style/scss/_variables.scss
@@ -9,3 +9,4 @@ $phone: "(max-width: 480px)";
 $small-tablet: "(max-width: 768px)";
 $tablet: "(max-width: 1024px)";
 $wide: "(max-width: 1350px)";
+$super-wide: "(min-width: 1351px)"
