--- a/style/css/style.css
+++ b/style/css/style.css
@@ -259,7 +259,7 @@ html .l-page-wrapper {
 .l-menu {
   background-color: #a43f49;
   width: 30rem;
-  min-height: 100vh;
+  height: 100vh;
   text-align: center;
   position: fixed;
   -webkit-transition: 1s;
@@ -346,8 +346,8 @@ html .l-page-wrapper {
 }
 
 .c-logo {
-  padding-top: 6rem;
-  margin-bottom: 7rem;
+  padding-top: 10%;
+  margin-bottom: 10%;
 }
 
 .c-logo__photo {
@@ -362,8 +362,8 @@ html .l-page-wrapper {
 }
 
 .c-nav {
-  padding: 0;
-  border-top: 4px solid #fff;
+  padding: 0 0%;
+  border-top: 2px solid #fff;
 }
 
 .c-nav__link {
@@ -372,11 +372,17 @@ html .l-page-wrapper {
 }
 
 .c-nav__item {
-  padding: 3rem 0;
-  border-bottom: 4px solid #fff;
+  padding: 10% 0;
+  border-bottom: 2px solid #fff;
   font-weight: 700;
   -webkit-transition: background-color 0.5s;
   transition: background-color 0.5s;
+}
+
+@media (max-height: 838px) {
+  .c-nav__item {
+    padding: 5% 0;
+  }
 }
 
 @media (min-width: 1351px) {
@@ -398,9 +404,16 @@ html .l-page-wrapper {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  padding: 5rem 20%;
+  padding: 10% 20%;
   margin-bottom: 5rem;
   border-bottom: 1px solid rgba(250, 250, 250, 0.1);
+}
+
+@media (max-height: 838px) {
+  .c-socials {
+    padding: 5% 20%;
+    margin-bottom: 2rem;
+  }
 }
 
 .c-socials__item {
